--- a/pom.xml
+++ b/pom.xml
@@ -49,7 +49,8 @@
         <log4j.version>1.2.16</log4j.version>
         <slf4j.version>1.7.10</slf4j.version>
         <!-- Maven Plugins Versions -->
-        <maven-assembly-plugin.version>2.6</maven-assembly-plugin.version>
+        <maven-assembly-plugin.version>3.1.0</maven-assembly-plugin.version>
+        <maven-release-plugin.version>2.5.3</maven-release-plugin.version>
     </properties>
     <dependencies>
         <dependency>
@@ -98,6 +99,11 @@
             </exclusions>
         </dependency>
     </dependencies>
+    <scm>
+        <connection>scm:git:git@github.com:xdevroey/GPMachine.git</connection>
+        <url>scm:git:git@github.com:xdevroey/GPMachine.git</url>
+        <developerConnection>scm:git:git@github.com:xdevroey/GPMachine.git</developerConnection>
+    </scm>    
     <build>
         <plugins>
             <plugin>
@@ -122,6 +128,11 @@
                         </goals>
                     </execution>
                 </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-release-plugin</artifactId>
+                <version>${maven-release-plugin.version}</version>
             </plugin>
         </plugins>
         <resources>
