--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,7 @@
         <slf4j.version>1.7.10</slf4j.version>
         <!-- Maven Plugins Versions -->
         <maven-assembly-plugin.version>3.1.0</maven-assembly-plugin.version>
+        <maven-javadoc-plugin.version>3.0.0</maven-javadoc-plugin.version>
         <maven-release-plugin.version>2.5.3</maven-release-plugin.version>
     </properties>
     <dependencies>
@@ -135,6 +136,18 @@
                 <version>${maven-release-plugin.version}</version>
             </plugin>
         </plugins>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-javadoc-plugin</artifactId>
+                    <version>${maven-javadoc-plugin.version}</version>
+                    <configuration>
+                        <failOnError>false</failOnError>
+                    </configuration>
+                </plugin>
+            </plugins>
+        </pluginManagement>
         <resources>
             <resource>
                 <directory>src/main/resources</directory>
