--- a/pom.xml
+++ b/pom.xml
@@ -143,7 +143,7 @@
                     <artifactId>maven-javadoc-plugin</artifactId>
                     <version>${maven-javadoc-plugin.version}</version>
                     <configuration>
-                        <failOnError>false</failOnError>
+                        <skip>true</skip>
                     </configuration>
                 </plugin>
             </plugins>
